Fix output encoding for vcard output

KABC::VCardConverter creates UTF-8 encoded output, so implicitly
converting that to QString and then converting with output codec
resulted in a broken chain conversions.

Now check if output codec is not UTF-8 and then recode vcard output
from UTF-8 to QString before passing that to the chosen output
converter.
BUG: 239996